2002-08-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-mhonarc.el (shimbun-make-contents): Encode the value
	of X-From-R13 before it is refered as the from address.

2002-08-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-lynx-like-map): Change the key `C-c w' to `C-c M-w'
	for the command `w3m-delete-other-buffers'.
	(w3m-info-like-map): Ditto.

2002-08-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Reset for development series toward
	emacs-w3m-1.4.

2002-08-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-history): Call `w3m-db-history' instead of goto
	`about://db-history/'.

2002-08-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-delete-other-buffers): New user command.
	(w3m-lynx-like-map): Bind the key `C-c w' to the command
	`w3m-delete-other-buffers'.
	(w3m-info-like-map): Ditto.
	(w3m-select-buffer-mode-map): Bind the key to the command
	`w3m-select-buffer-delete-other-buffers'.
	(w3m-select-buffer-delete-other-buffers): New user command.

2002-08-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-check-header-tags): Ignore case of tags.
	(w3m-about-db-history): Accept range specification in URL.
	(w3m-db-history-display-size): New option.
	(w3m-db-history): Refer it.

	* w3m-antenna.el (w3m-antenna-html-skeleton): Add link to
	about://antenna-edit/.
	(w3m-about-antenna-edit): New function.  This is an experimental
	imprement of the editor for Antenna sites.

2002-08-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (char-after): Byte-optimize it for old Emacsen.
	(char-before): Ditto.

2002-08-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-mhonarc.el (shimbun-mhonarc-rot13-table): New
	constant.
	(shimbun-mhonarc-rot13-decode): New function.
	(shimbun-make-contents): Call the above function to decode the
	field of X-From-R13.

2002-08-23  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-view-this-url-new-session-in-background):
	New user option.